# simple-agent-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: llm.py  main.py
app/graph/: builder.py  nodes.py
